--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,15 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button5" />
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="173dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="60dp"
-        android:text="Change BG Color"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+
 
     <TextView
         android:id="@+id/textView3"
@@ -50,7 +42,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintTop_toBottomOf="@+id/button4"
+        tools:ignore="UnknownId" />
 
     <Button
         android:id="@+id/Preferences"
@@ -58,7 +51,7 @@
         android:layout_height="53dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="124dp"
-        android:text="peferences"
+        android:text="BG Color Change"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
