--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -33,22 +33,33 @@
         android:id="@+id/Preferences"
         android:layout_width="201dp"
         android:layout_height="55dp"
-        android:layout_marginTop="63dp"
+        android:layout_marginTop="381dp"
         android:text="BG Color Change"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Add_data" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/Add_data"
         android:layout_width="188dp"
         android:layout_height="56dp"
-        android:layout_marginStart="155dp"
-        android:layout_marginTop="199dp"
-        android:layout_marginEnd="162dp"
-        android:layout_marginBottom="484dp"
+        android:layout_marginTop="450dp"
+        android:layout_marginBottom="225dp"
         android:text="Add List"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="181dp"
+        android:layout_height="103dp"
+        android:text="This App was develop by SPMUKN De Alwis"
+        android:textColor="#101010"
+        app:layout_constraintBottom_toTopOf="@+id/Preferences"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
